// Vitest Snapshot v1

exports[`transform > Add lang attributes quickly to transformed code 1`] = `
{
  "code": "<script lang=\\"ts\\"> export default {name: 'App'}</script><script setup lang=\\"ts\\" name=\\"App\\">// placeholder </script>",
  "map": SourceMap {
    "file": "App.vue",
    "mappings": "wDAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC",
    "names": [],
    "sources": [
      "App.vue",
    ],
    "sourcesContent": [
      null,
    ],
    "version": 3,
  },
}
`;

exports[`transform > If there is a script that does not convert 1`] = `null`;

exports[`transform > transform script 1`] = `
{
  "code": "<script> export default {name: 'App'}</script><script setup name=\\"App\\">// placeholder </script>",
  "map": SourceMap {
    "file": "App.vue",
    "mappings": "8CAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC",
    "names": [],
    "sources": [
      "App.vue",
    ],
    "sourcesContent": [
      null,
    ],
    "version": 3,
  },
}
`;
